    http://code.google.com/p/perl-devel-nytprof/issues/detail?id=15
  Fixed to use correct scripts during test and so avoid permissions
    issues, thanks to David Golden.
  Fixed suprious "Unable to determine line number" warnings
    when using options like -p, -n, -Mfoo.

  Changed enable_profile() to discard the time spent since
    profile was disabled.

  Added nytprofcg utility to generate callgrind data for
    viewing via Kcachegrind, thanks to Chia-liang Kao.

=head2 Changes in Devel::NYTProf 2.09 (svn r733) 29th March 2009

  Added support for modules using AutoLoader, e.g., POSIX & Storable,
    to fix the "Unable to open '... (autosplit into ...)'" warnings.
  Fixed report filename generation to remove colons,
    for Windows, reported by Adam Kennedy in rt bug #43798.
  Fixed report filename generation to remove dots, for VMS.
  Fixed savesrc option which wasn't safe and reliable.
  Added missing t/test22-strevala.t to MANIFEST.
  Extended testing to exercise compress and savesrc options.

Ported to VMS, thanks to Peter (Stig) Edwards:

  Renamed t/\d\d.test.t    files to t/\d\d_test.t 
          t/test*.pm.x     files to t/test*.pm_x 
          t/test*fork.\d.* files to t/test*fork-\d.*
          .js and .css     file to only have one period/dot
    for greater portability.  VMS ODS-2 files can only have
    one period/dot.
  Added t/92-file_port.t as a developer-only and
    request-using-ENV test, to help maintain portable files,
    currently .indent.pro and .perltidyrc fall foul of portable
    filename characters as defined by ANSI C and perlport.
  NYTProf.xs's open_output_file use mode 'wb' and not 'wbx'
    to avoid unsupported error when on VMS.

=head2 Changes in Devel::NYTProf 2.08 (svn r685) 15th Feb 2009

Core:

  Added optimize=0 option to disable the perl optimizer
    so you can see more accurate statement execution counts
    for some kinds of constructs.

  Added savesrc=1 option to copy source code into the profile